--- a/edit_data/Chan/Tkinter Model.ipynb
+++ b/edit_data/Chan/Tkinter Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,6 +92,7 @@
        "      <th>Production_Companies</th>\n",
        "      <th>Production_Countries</th>\n",
        "      <th>...</th>\n",
+       "      <th>Genres_Parse</th>\n",
        "      <th>Belongs_To_Collection_Parse</th>\n",
        "      <th>Spoken_Languages_Parse</th>\n",
        "      <th>Production_Companies_Parse</th>\n",
@@ -101,7 +102,6 @@
        "      <th>Keywords_parse</th>\n",
        "      <th>Cast_parse</th>\n",
        "      <th>Director_parse</th>\n",
-       "      <th>Release_Year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -118,6 +118,7 @@
        "      <td>[{'name': 'Pixar Animation Studios', 'id': 3}]</td>\n",
        "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
        "      <td>...</td>\n",
+       "      <td>['Animation', 'Comedy', 'Family']</td>\n",
        "      <td>['Toy Story Collection']</td>\n",
        "      <td>['English']</td>\n",
        "      <td>['Pixar Animation Studios']</td>\n",
@@ -127,7 +128,6 @@
        "      <td>['jealousy', 'toy', 'boy', 'friendship', 'frie...</td>\n",
        "      <td>['Tom Hanks', 'Tim Allen', 'Don Rickles', 'Jim...</td>\n",
        "      <td>['John Lasseter']</td>\n",
-       "      <td>1995.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -142,6 +142,7 @@
        "      <td>[{'name': 'TriStar Pictures', 'id': 559}, {'na...</td>\n",
        "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
        "      <td>...</td>\n",
+       "      <td>['Adventure', 'Fantasy', 'Family']</td>\n",
        "      <td>NaN</td>\n",
        "      <td>['English', 'Français']</td>\n",
        "      <td>['TriStar Pictures', 'Teitler Film', 'Intersco...</td>\n",
@@ -151,11 +152,10 @@
        "      <td>['board game', 'disappearance', \"based on chil...</td>\n",
        "      <td>['Robin Williams', 'Jonathan Hyde', 'Kirsten D...</td>\n",
        "      <td>['Joe Johnston']</td>\n",
-       "      <td>1995.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 29 columns</p>\n",
+       "<p>2 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -175,13 +175,13 @@
        "0  [{'iso_3166_1': 'US', 'name': 'United States o...  ...   \n",
        "1  [{'iso_3166_1': 'US', 'name': 'United States o...  ...   \n",
        "\n",
-       "  Belongs_To_Collection_Parse   Spoken_Languages_Parse  \\\n",
-       "0    ['Toy Story Collection']              ['English']   \n",
-       "1                         NaN  ['English', 'Français']   \n",
+       "                         Genres_Parse  Belongs_To_Collection_Parse  \\\n",
+       "0   ['Animation', 'Comedy', 'Family']     ['Toy Story Collection']   \n",
+       "1  ['Adventure', 'Fantasy', 'Family']                          NaN   \n",
        "\n",
-       "                          Production_Companies_Parse  \\\n",
-       "0                        ['Pixar Animation Studios']   \n",
-       "1  ['TriStar Pictures', 'Teitler Film', 'Intersco...   \n",
+       "    Spoken_Languages_Parse                         Production_Companies_Parse  \\\n",
+       "0              ['English']                        ['Pixar Animation Studios']   \n",
+       "1  ['English', 'Français']  ['TriStar Pictures', 'Teitler Film', 'Intersco...   \n",
        "\n",
        "     Production_Countries_Parse Production_Countries_Code_Parse  \\\n",
        "0  ['United States of America']                          ['US']   \n",
@@ -195,18 +195,14 @@
        "0  ['jealousy', 'toy', 'boy', 'friendship', 'frie...   \n",
        "1  ['board game', 'disappearance', \"based on chil...   \n",
        "\n",
-       "                                          Cast_parse     Director_parse  \\\n",
-       "0  ['Tom Hanks', 'Tim Allen', 'Don Rickles', 'Jim...  ['John Lasseter']   \n",
-       "1  ['Robin Williams', 'Jonathan Hyde', 'Kirsten D...   ['Joe Johnston']   \n",
+       "                                          Cast_parse     Director_parse  \n",
+       "0  ['Tom Hanks', 'Tim Allen', 'Don Rickles', 'Jim...  ['John Lasseter']  \n",
+       "1  ['Robin Williams', 'Jonathan Hyde', 'Kirsten D...   ['Joe Johnston']  \n",
        "\n",
-       "  Release_Year  \n",
-       "0       1995.0  \n",
-       "1       1995.0  \n",
-       "\n",
-       "[2 rows x 29 columns]"
+       "[2 rows x 28 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,6 +481,74 @@
     "plt.ylabel(\"Vote Count\")\n",
     "plt.colorbar(label='Cluster')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import ttk\n",
+    "import pandas as pd\n",
+    "import ast\n",
+    "\n",
+    "# Ensure 'Cast_parse' is in list format and handle any non-list or NaN entries\n",
+    "movies_df['Cast_parse'] = movies_df['Cast_parse'].apply(lambda x: eval(x) if isinstance(x, str) else x if isinstance(x, list) else [])\n",
+    "\n",
+    "# Extract genres and ensure they are in the correct format\n",
+    "def extract_genres(genre_str):\n",
+    "    try:\n",
+    "        genres = ast.literal_eval(genre_str)\n",
+    "        return [genre['name'] for genre in genres]\n",
+    "    except (ValueError, SyntaxError):\n",
+    "        return []\n",
+    "\n",
+    "all_genres = set()\n",
+    "movies_df['Genres'].dropna().apply(lambda x: all_genres.update(extract_genres(x)))\n",
+    "\n",
+    "all_genres = sorted(list(all_genres))\n",
+    "\n",
+    "# Extract the release year from the release_date column\n",
+    "movies_df['Release_Year'] = pd.to_datetime(movies_df['Release_Date'], errors='coerce').dt.year\n",
+    "all_release_years = sorted(movies_df['Release_Year'].dropna().astype(int).unique(), reverse=True)\n",
+    "\n",
+    "# Initialize the main window\n",
+    "root = tk.Tk()\n",
+    "root.title(\"Movie Recommender\")\n",
+    "\n",
+    "# Define the function to show recommendations based on actor\n",
+    "def show_actor_recommendations():\n",
+    "    actor_name = actor_input.get().strip().lower()\n",
+    "    filtered_movies = movies_df[movies_df['Cast_parse'].apply(lambda cast: any(actor_name == actor.lower().strip() for actor in cast))]\n",
+    "    \n",
+    "    if filtered_movies.empty:\n",
+    "        result_var.set(f\"No movies found with actor '{actor_name.title()}'.\")\n",
+    "    else:\n",
+    "        filtered_movies_sorted = filtered_movies.sort_values(by='Popularity', ascending=False)\n",
+    "        top_5_filtered_movies = filtered_movies_sorted.head(5)\n",
+    "        \n",
+    "        # Formatting the output\n",
+    "        results = [f\"Title: {row['Original_Title']}\\nVote Average: {row['Vote_Average']}\\nPopularity: {row['Popularity']}\\n{'-' * 50}\" \n",
+    "                   for _, row in top_5_filtered_movies.iterrows()]\n",
+    "        result_var.set(\"\\n\\n\".join(results))\n",
+    "\n",
+    "# Add a label and entry for actor name input\n",
+    "ttk.Label(root, text=\"Enter Actor's Name:\").grid(column=0, row=0, padx=10, pady=10)\n",
+    "actor_input = ttk.Entry(root)\n",
+    "actor_input.grid(column=1, row=0, padx=10, pady=10)\n",
+    "\n",
+    "# Add a button to trigger actor-based recommendation\n",
+    "ttk.Button(root, text=\"Find Movies\", command=show_actor_recommendations).grid(column=0, row=1, columnspan=2, padx=10, pady=10)\n",
+    "\n",
+    "# Add a label to display the results\n",
+    "result_var = tk.StringVar()\n",
+    "result_label = ttk.Label(root, textvariable=result_var, justify='left')\n",
+    "result_label.grid(column=0, row=2, columnspan=2, padx=10, pady=10)\n",
+    "\n",
+    "# Run the application\n",
+    "root.mainloop()\n"
    ]
   }
  ],
