collaborative item-item based prediction model

--- a/edit_data/Michael/movie_genres_dummy_variables_conversion.ipynb
+++ b/edit_data/Michael/movie_genres_dummy_variables_conversion.ipynb
@@ -925,8 +925,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-17T08:18:41.115126Z",
-     "start_time": "2024-08-17T08:18:41.049887Z"
+     "end_time": "2024-08-17T10:37:10.402827Z",
+     "start_time": "2024-08-17T10:37:10.101950Z"
     }
    },
    "cell_type": "code",
@@ -944,35 +944,33 @@
     "df_genres = pd.concat([df_genres_matrix, genre_df], axis=1)\n",
     "\n",
     "# Display the final DataFrame\n",
-    "df_genres.head()"
+    "one_hot.head()"
    ],
    "id": "7b9bf5d54439a351",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "      Id                  Genres_Parse  Action  Adventure  Animation  Comedy  \\\n",
-       "0    862   [Animation, Comedy, Family]   False      False       True    True   \n",
-       "1   8844  [Adventure, Fantasy, Family]   False       True      False   False   \n",
-       "2  15602             [Romance, Comedy]   False      False      False    True   \n",
-       "3  31357      [Comedy, Drama, Romance]   False      False      False    True   \n",
-       "4  11862                      [Comedy]   False      False      False    True   \n",
+       "   Action  Adventure  Animation  Comedy  Crime  Documentary  Drama  Family  \\\n",
+       "0   False      False       True   False  False        False  False   False   \n",
+       "0   False      False      False    True  False        False  False   False   \n",
+       "0   False      False      False   False  False        False  False    True   \n",
+       "1   False       True      False   False  False        False  False   False   \n",
+       "1   False      False      False   False  False        False  False   False   \n",
        "\n",
-       "   Crime  Documentary  Drama  Family  ...  History  Horror  Music  Mystery  \\\n",
-       "0  False        False  False    True  ...    False   False  False    False   \n",
-       "1  False        False  False    True  ...    False   False  False    False   \n",
-       "2  False        False  False   False  ...    False   False  False    False   \n",
-       "3  False        False   True   False  ...    False   False  False    False   \n",
-       "4  False        False  False   False  ...    False   False  False    False   \n",
+       "   Fantasy  Foreign  History  Horror  Music  Mystery  Romance  \\\n",
+       "0    False    False    False   False  False    False    False   \n",
+       "0    False    False    False   False  False    False    False   \n",
+       "0    False    False    False   False  False    False    False   \n",
+       "1    False    False    False   False  False    False    False   \n",
+       "1     True    False    False   False  False    False    False   \n",
        "\n",
-       "   Romance  Science Fiction  TV Movie  Thriller    War  Western  \n",
-       "0    False            False     False     False  False    False  \n",
-       "1    False            False     False     False  False    False  \n",
-       "2     True            False     False     False  False    False  \n",
-       "3     True            False     False     False  False    False  \n",
-       "4    False            False     False     False  False    False  \n",
-       "\n",
-       "[5 rows x 22 columns]"
+       "   Science Fiction  TV Movie  Thriller    War  Western  \n",
+       "0            False     False     False  False    False  \n",
+       "0            False     False     False  False    False  \n",
+       "0            False     False     False  False    False  \n",
+       "1            False     False     False  False    False  \n",
+       "1            False     False     False  False    False  "
       ],
       "text/html": [
        "<div>\n",
@@ -993,8 +991,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>Genres_Parse</th>\n",
        "      <th>Action</th>\n",
        "      <th>Adventure</th>\n",
        "      <th>Animation</th>\n",
@@ -1003,7 +999,8 @@
        "      <th>Documentary</th>\n",
        "      <th>Drama</th>\n",
        "      <th>Family</th>\n",
-       "      <th>...</th>\n",
+       "      <th>Fantasy</th>\n",
+       "      <th>Foreign</th>\n",
        "      <th>History</th>\n",
        "      <th>Horror</th>\n",
        "      <th>Music</th>\n",
@@ -1019,17 +1016,62 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>862</td>\n",
-       "      <td>[Animation, Comedy, Family]</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -1043,8 +1085,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>8844</td>\n",
-       "      <td>[Adventure, Fantasy, Family]</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -1052,8 +1092,9 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -1066,66 +1107,17 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>15602</td>\n",
-       "      <td>[Romance, Comedy]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <th>1</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>31357</td>\n",
-       "      <td>[Comedy, Drama, Romance]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11862</td>\n",
-       "      <td>[Comedy]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -1139,16 +1131,15 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 117
+   "execution_count": 118
   }
  ],
  "metadata": {
