--- a/edit_data/Lee/my test codes.ipynb
+++ b/edit_data/Lee/my test codes.ipynb
@@ -108,11 +108,70 @@
     "movies_df['Genres'] = all_genres\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74\n",
+      "5\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Set the seed\n",
+    "random.seed(10)\n",
+    "\n",
+    "# Generate random numbers\n",
+    "print(random.randint(1, 100))  # This will always produce the same output if the seed is 10\n",
+    "print(random.randint(1, 100))\n",
+    "print(random.randint(1, 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sally field\n"
+     ]
+    }
+   ],
+   "source": [
+    "actor_name = input(\"Enter the actor's name: \").strip().lower()\n",
+    "print(actor_name)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.8"
   },
   "orig_nbformat": 4
  },
