--- a/edit_data/Chan/Tkinter Model.ipynb
+++ b/edit_data/Chan/Tkinter Model.ipynb
@@ -213,65 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Initialize the main window\n",
-    "# root = tk.Tk()\n",
-    "# root.title(\"Movie Recommender\")\n",
-    "\n",
-    "# # Define the function to show recommendations\n",
-    "# def show_recommendations():\n",
-    "#     genre = genre_input.get()\n",
-    "#     year = year_input.get()\n",
-    "#     rating = rating_input.get()\n",
-    "#     recommendations = recommend_movies(genre, year, rating)\n",
-    "#     result_var.set(\"\\n\".join(recommendations))\n",
-    "\n",
-    "# # Simple recommendation function considering multiple inputs\n",
-    "# def recommend_movies(genre, year, rating):\n",
-    "#     filtered_movies = movies_df\n",
-    "    \n",
-    "#     if genre:\n",
-    "#         filtered_movies = filtered_movies[filtered_movies['genres'].str.contains(genre, case=False, na=False)]\n",
-    "#     if year:\n",
-    "#         filtered_movies = filtered_movies[filtered_movies['release_date'].str.contains(year, na=False)]\n",
-    "#     if rating:\n",
-    "#         filtered_movies = filtered_movies[filtered_movies['vote_average'] >= float(rating)]\n",
-    "    \n",
-    "#     top_movies = filtered_movies.head(10)['title'].tolist()\n",
-    "#     return top_movies\n",
-    "\n",
-    "# # Add a label and entry for genre input\n",
-    "# ttk.Label(root, text=\"Enter your preferred genre:\").grid(column=0, row=0, padx=10, pady=10)\n",
-    "# genre_input = ttk.Entry(root)\n",
-    "# genre_input.grid(column=1, row=0, padx=10, pady=10)\n",
-    "\n",
-    "# # Add a label and entry for year input\n",
-    "# ttk.Label(root, text=\"Enter release year:\").grid(column=0, row=1, padx=10, pady=10)\n",
-    "# year_input = ttk.Entry(root)\n",
-    "# year_input.grid(column=1, row=1, padx=10, pady=10)\n",
-    "\n",
-    "# # Add a label and entry for rating input\n",
-    "# ttk.Label(root, text=\"Enter minimum rating:\").grid(column=0, row=2, padx=10, pady=10)\n",
-    "# rating_input = ttk.Entry(root)\n",
-    "# rating_input.grid(column=1, row=2, padx=10, pady=10)\n",
-    "\n",
-    "# # Add a button to trigger recommendation\n",
-    "# ttk.Button(root, text=\"Get Recommendations\", command=show_recommendations).grid(column=0, row=3, columnspan=2, padx=10, pady=10)\n",
-    "\n",
-    "# # Add a label to display the results\n",
-    "# result_var = tk.StringVar()\n",
-    "# ttk.Label(root, textvariable=result_var).grid(column=0, row=4, columnspan=2, padx=10, pady=10)\n",
-    "\n",
-    "# # Run the application\n",
-    "# root.mainloop()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,34 +322,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Id', 'Original_Title', 'Original_Language', 'Spoken_Languages',\n",
-       "       'Budget', 'Revenue', 'Runtime', 'Release_Date', 'Production_Companies',\n",
-       "       'Production_Countries', 'imdb_id', 'Popularity', 'Vote_Average',\n",
-       "       'Vote_Count', 'Belongs_To_Collection', 'Tagline', 'Overview', 'Genres',\n",
-       "       'Genres_Parse', 'Belongs_To_Collection_Parse', 'Spoken_Languages_Parse',\n",
-       "       'Production_Companies_Parse', 'Production_Countries_Parse',\n",
-       "       'Production_Countries_Code_Parse', 'Keywords', 'Keywords_parse',\n",
-       "       'Cast_parse', 'Director_parse', 'Release_Year'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "movies_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -462,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,6 +449,140 @@
     "\n",
     "# Run the application\n",
     "root.mainloop()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**GUI Model with KNN Model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Python312\\Lib\\tkinter\\__init__.py\", line 1968, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_34772\\2433363470.py\", line 91, in display_recommendations\n",
+      "    image = Image.open(image_path)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Python312\\Lib\\site-packages\\PIL\\Image.py\", line 3277, in open\n",
+      "    fp = builtins.open(filename, \"rb\")\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: 'C:\\\\Users\\\\chanc\\\\Documents\\\\GitHub\\\\Techlabs-DS5\\\\edit_data\\\\Chan\\\\example_poster.jpg'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import ttk\n",
+    "from PIL import Image, ImageTk\n",
+    "import pandas as pd\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "\n",
+    "# Assuming the movies_df DataFrame has been loaded and preprocessed with combined features\n",
+    "\n",
+    "# Initialize TF-IDF Vectorizer\n",
+    "tfidf = TfidfVectorizer(stop_words='english')\n",
+    "\n",
+    "# Vectorize the combined features\n",
+    "tfidf_matrix = tfidf.fit_transform(movies_df['combined_features'])\n",
+    "\n",
+    "# Initialize the Nearest Neighbors model\n",
+    "knn = NearestNeighbors(metric='cosine', algorithm='brute', n_neighbors=5)\n",
+    "\n",
+    "# Fit the model using the TF-IDF matrix\n",
+    "knn.fit(tfidf_matrix)\n",
+    "\n",
+    "# Function to get top 5 movie recommendations with similarity scores\n",
+    "def get_movie_recommendations_with_similarity(movie_title, model=knn, matrix=tfidf_matrix, data=movies_df):\n",
+    "    idx = data.index[data['Original_Title'].str.lower() == movie_title.lower()].tolist()\n",
+    "    \n",
+    "    if len(idx) == 0:\n",
+    "        return \"Movie not found in the database.\"\n",
+    "    \n",
+    "    idx = idx[0]\n",
+    "    \n",
+    "    distances, indices = model.kneighbors(matrix[idx], n_neighbors=6)\n",
+    "    \n",
+    "    similar_movies_indices = indices.flatten()[1:]\n",
+    "    similar_movies_distances = distances.flatten()[1:]\n",
+    "    \n",
+    "    similarity_scores = 1 - similar_movies_distances\n",
+    "    \n",
+    "    similar_movies = data.iloc[similar_movies_indices][['Original_Title']]\n",
+    "    similar_movies['Similarity_Score'] = similarity_scores\n",
+    "    \n",
+    "    return similar_movies\n",
+    "\n",
+    "# Create the GUI application using Tkinter\n",
+    "class MovieRecommenderApp(tk.Tk):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.title(\"Movie Recommender\")\n",
+    "        self.geometry(\"600x600\")  # Increase the window size to accommodate the image\n",
+    "\n",
+    "        # Label and entry for the movie title\n",
+    "        self.label = ttk.Label(self, text=\"Enter Movie Title:\")\n",
+    "        self.label.pack(pady=10)\n",
+    "\n",
+    "        self.movie_entry = ttk.Entry(self, width=50)  # Increase the width of the entry\n",
+    "        self.movie_entry.pack(pady=5)\n",
+    "\n",
+    "        # Button to get recommendations\n",
+    "        self.recommend_button = ttk.Button(self, text=\"Get Recommendations\", command=self.display_recommendations)\n",
+    "        self.recommend_button.pack(pady=10)\n",
+    "\n",
+    "        # Text widget to display recommendations\n",
+    "        self.recommendations_text = tk.Text(self, width=60, height=10, wrap=tk.WORD)  # Adjust height for image space\n",
+    "        self.recommendations_text.pack(pady=10)\n",
+    "\n",
+    "        # Label to display an image\n",
+    "        self.image_label = ttk.Label(self)\n",
+    "        self.image_label.pack(pady=10)\n",
+    "\n",
+    "    def display_recommendations(self):\n",
+    "        # Clear previous recommendations and image\n",
+    "        self.recommendations_text.delete(1.0, tk.END)\n",
+    "        self.image_label.config(image='')\n",
+    "\n",
+    "        # Get the movie title from the entry\n",
+    "        movie_title = self.movie_entry.get()\n",
+    "\n",
+    "        # Get recommendations\n",
+    "        recommendations = get_movie_recommendations_with_similarity(movie_title)\n",
+    "\n",
+    "        # Display recommendations\n",
+    "        if isinstance(recommendations, str):\n",
+    "            self.recommendations_text.insert(tk.END, recommendations)\n",
+    "        else:\n",
+    "            self.recommendations_text.insert(tk.END, f\"Here are your top 5 movies similar to '{movie_title}':\\n\\n\")\n",
+    "            for index, row in recommendations.iterrows():\n",
+    "                self.recommendations_text.insert(tk.END, f\"{row['Original_Title']} (Similarity Score: {row['Similarity_Score']:.2f})\\n\")\n",
+    "\n",
+    "            # Load and display an image (example: a static image of a movie poster)\n",
+    "            image_path = \"example_poster.jpg\"  # Replace with the path to an actual image\n",
+    "            image = Image.open(image_path)\n",
+    "            image = image.resize((300, 450), Image.ANTIALIAS)  # Resize to fit the window\n",
+    "            photo = ImageTk.PhotoImage(image)\n",
+    "            self.image_label.config(image=photo)\n",
+    "            self.image_label.image = photo  # Keep a reference to the image\n",
+    "\n",
+    "# Run the application\n",
+    "if __name__ == \"__main__\":\n",
+    "    app = MovieRecommenderApp()\n",
+    "    app.mainloop()\n"
    ]
   }
  ],
